YUK-25296 - Dev Task : Change Table Styling   - fix spacing issues in reports

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
@@ -483,9 +483,8 @@ table th,
     font-weight: 600;
     font-size: 0.875rem;
     line-height: 1.5rem;
-    letter-spacing: 0.01071em;
     display: table-cell;
-    vertical-align: inherit;
+    vertical-align: bottom !important;
     border-bottom: 1px solid @table-border-color;
     text-align: left;
     color: #424e54;
